# emissary

./: .bumpversion.cfg  .dir-locals.el  .dockerignore  .drone.yml  .editorconfig  .gitattributes  .gitconfig.docker  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .mailmap  .mangle-BUILD  .travis.yml  .travis.yml.bak  AMBASSADORURL  BRANCH_RELEASE.md  BUILD  BUILD.head  BUILDING.md  CHANGELOG.md  CHANGELOG.old-pro.md  CODE_OF_CONDUCT.md  Chart.yaml  DEPENDENCIES.md  DEPENDENCY_LICENSES.md  DEVELOPING.md  Dockerfile  Dockerfile.aes-backend  Dockerfile.ambassador  Dockerfile.base  Dockerfile.base-envoy  Dockerfile.base-go  Dockerfile.base-py  Dockerfile.base-runtime  Dockerfile.cached  Dockerfile.envoy-tests  Dockerfile.goreleaser  Dockerfile.in  GOVERNANCE.md  (+168 more)
.ci/: blc-website-preview  circle-preview  cluster-claim  cluster-unclaim  helpers.sh  install-blc  kubernaut-claim  kubernaut-unclaim  pr-build-website-preview  publish-website  publish-website-preview  travis-fix-env  website-blc  website-preview-blc  website-preview-build  website-preview-circle  website-preview-publish  website-prod-publish
.circleci/: .gitattributes  .gitignore  amb-images-load-workspace  amb-images-save-images.go  amb-images-save-workspace  ambassador-egress  config.yml  deploy.sh  generate  kconf.b64  kubernaut-claim.sh  promote.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot-disabled.yml  dependabot.yml  dependabot.yml.gen  pull_request_template.md  stale.yml
Community/: GOVERNANCE.md  MAINTAINERS.md  MEETING_SCHEDULE.md  SUPPORT.md
DevDocumentation/: ARCHITECTURE.md  BUILDING.md  DEVELOPING.md  SECURITY_RELEASE_PROCESS.md  gnu-make.md
Example/: README.md  ambassador-pro.yaml  httpbin-policy.yaml  httpbin.yaml
_cxx/: .editorconfig  .gitignore  envoy.mk
_includes/: header.html
_layouts/: footer.html
_site/: index.html
about/: alternatives.md  concepts.md  edge-policy-console.md  features-and-benefits.md  mappings.md  microservices-api-gateways.md  quickstart.md  roadmap.md  support.md  tls-auth.md  why-ambassador.md
actl/: .dockerignore  Dockerfile  Makefile  (+4 more)
python/ambassador/: BUILD  VERSION.py  __init__.py  ambscout.py  cache.py  compile.py  constants.py  pyproject.toml  reconfig_stats.py  resource.py  scout.py  utils.py
python/ambassador-diag/: pyproject.toml
python/ambassador-diag/src/ambassador_diag/: __init__.py  diagd.py
python/ambassador-diag/src/ambassador_diag/templates/: __init__.py  diag.html  guidance.html  overview.html  system-info.html
python/ambassador/config/: BUILD  __init__.py  acmapping.py  acpragma.py  acresource.py  config.py  resourcefetcher.py  resourceprocessor.py
python/ambassador/diagnostics/: BUILD  __init__.py  diagnostics.py  envoy_stats.py
python/ambassador/envoy/: BUILD  __init__.py  common.py
python/ambassador/envoy/proto/: wkt.py
python/ambassador/envoy/proto/config/core/v3/: __init__.py
python/ambassador/envoy/proto/config/listener/v3/: __init__.py
python/ambassador/envoy/proto/config/route/v3/: __init__.py
python/ambassador/envoy/proto/type/matcher/v3/: __init__.py
python/ambassador/envoy/v2/: BUILD  __init__.py  v2_static_resources.py  v2admin.py  v2bootstrap.py  v2cidrrange.py  v2cluster.py  v2config.py  v2httpfilter.py  v2listener.py  v2ratelimit.py  v2ratelimitaction.py  v2ready.py  v2route.py  v2tls.py  v2tracing.py  v2virtualhost.py
python/ambassador/envoy/v3/: __init__.py  v3_static_resources.py  v3admin.py  v3bootstrap.py  v3cidrrange.py  v3cluster.py  v3config.py  v3httpfilter.py  v3listener.py  v3ratelimit.py  v3ratelimitaction.py  v3ready.py  v3route.py  v3runtime.py  v3tls.py  v3tracing.py  v3virtualhost.py
python/ambassador/fetch/: __init__.py  ambassador.py  dependency.py  fetcher.py  ingress.py  k8sobject.py  k8sprocessor.py  knative.py  location.py  resource.py  secret.py  service.py
python/ambassador/ir/: BUILD  __init__.py  ir.py  irambassador.py  irauth.py  irbasemapping.py  irbasemappinggroup.py  irbuffer.py  ircircuitbreakers.py  ircluster.py  ircors.py  irerrorresponse.py  irextproc.py  irfilter.py  irgofilter.py  irgzip.py  irhealthchecks.py  irhost.py  irhttpmapping.py  irhttpmappinggroup.py  iripallowdeny.py  irlistener.py  irlogservice.py  irmappingfactory.py  irratelimit.py  irresource.py  irretrypolicy.py  irserviceresolver.py  irtcpmapping.py  irtcpmappinggroup.py  irtls.py  irtlscontext.py  irtracing.py  irutils.py  irwasm.py
python/ambassador/proto/v2/: BUILD  Host_nojson_pb2.py  Host_pb2.py
python/ambassador/proto/v3alpha1/: Host_pb2.py
python/ambassador/src/ambassador/: VERSION.py  __init__.py  ambscout.py  cache.py  compile.py  reconfig_stats.py  resource.py  scout.py  utils.py
python/ambassador/src/ambassador/config/: __init__.py  acmapping.py  acpragma.py  acresource.py  config.py
python/ambassador/src/ambassador/diagnostics/: __init__.py  diagnostics.py  envoy_stats.py
python/ambassador/src/ambassador/envoy/: __init__.py  common.py
python/ambassador/src/ambassador/envoy/v3/: __init__.py  v3_static_resources.py  v3admin.py  v3bootstrap.py  v3cidrrange.py  v3cluster.py  v3config.py  v3httpfilter.py  v3listener.py  v3ratelimit.py  v3ratelimitaction.py  v3ready.py  v3route.py  v3runtime.py  v3tls.py  v3tracing.py
python/ambassador/src/ambassador/fetch/: __init__.py  ambassador.py  dependency.py  fetcher.py  ingress.py  k8sobject.py  k8sprocessor.py  knative.py  location.py  resource.py  secret.py  service.py
python/ambassador/src/ambassador/ir/: __init__.py  ir.py  irambassador.py  irauth.py  irbasemapping.py  irbasemappinggroup.py  irbuffer.py  ircluster.py  ircors.py  irerrorresponse.py  irgzip.py  irhealthchecks.py  irhost.py  irhttpmapping.py  irhttpmappinggroup.py  iripallowdeny.py  irlistener.py  irlogservice.py  irratelimit.py  irresource.py  irretrypolicy.py  irserviceresolver.py  irtcpmapping.py  irtcpmappinggroup.py  irtls.py  irtlscontext.py  irtracing.py
python/kat/: BUILD  README.md  harness.py  manifests.py  parser.py  pyproject.toml  utils.py
python/kat/src/kat/: harness.py  parser.py  utils.py
(+9004 files in other folders)
