[project]
name = "ambassador_diag"
version = "4.0.0-dev"
readme = "../README.md"
dependencies = [
    "click",
    "flask",
    "requests",
    "gunicorn",
    "jsonpatch",
    "expiringdict",
    "prometheus-client",
    "python-json-logger",
]


[project.scripts]
diagd = "ambassador_diag.diagd:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ambassador_diag"]

[tool.hatch.build.targets.sdist]
include = [
    "templates/*.ico",
    "templates/*.html",
]


[tool.ruff.lint.isort]
known-local-folder = ["ambassador_diag"]
